--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ jekyll-archives:
   enabled:
     - categories
   layout: archive
-  permalinks: /c/
+  permalinks:
     category: '/category/:name/'
     
 # Pagination 
