--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "AdabunAlima5"
-title: "AdabunAlima"
-description: "My blog"
+title: "AdabunAlima5"
+description: "AdabunAlima5 is a blog about entertainment and interesting information"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
