--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "AdabunAlima5"
 title: "AdabunAlima5"
-description: "AdabunAlima5 is a blog about entertainment and interesting information"
+description: "The greatest service which can be rendered any country is to add a useful plant to its culture"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
