--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ authors:
     display_name: Admin
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
-    web: https://www.xselebgram.xyz
+    web: /aboutme
     twitter: https://twitter.com/wowthemesnet
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
   john:
@@ -48,7 +48,7 @@ jekyll-archives:
     category: '/category/:name/'
     
 # Pagination 
-paginate: 10
+paginate: 7
 paginate_path: /page:num/
     
 # Other
