--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "ingganinggra.my.id"
-title: "ingganinggra.my.id"
+name: "ingganinggra"
+title: "ingganinggra"
 description: "There are no gardening mistakes, only experiments"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
