--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "ingganinggra"
-title: "ingganinggra"
+name: "yuliantianggraeningsih"
+title: "yuliantianggraeningsih"
 description: "There are no gardening mistakes, only experiments"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
@@ -48,7 +48,7 @@ jekyll-archives:
     category: '/category/:name/'
     
 # Pagination 
-paginate: 7
+paginate: 9
 paginate_path: /page:num/
     
 # Other
