--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "yuliantianggraeningsih"
 title: "yuliantianggraeningsih"
-description: "There are no gardening mistakes, only experiments"
+description: "Plant Your Way to a Better World"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: /
